scripts/kubernetes/apps/devops/adminer-resources/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: adminer
